--- a/deployer/templates/es.yaml
+++ b/deployer/templates/es.yaml
@@ -40,7 +40,7 @@ objects:
           - elasticsearch
           from:
             kind: ImageStreamTag
-            name: apiman-elasticsearch:latest
+            name: apiman-elasticsearch:${IMAGE_VERSION}
       strategy:
         type: Recreate
       template:
@@ -133,10 +133,14 @@ objects:
     description: "Timeout for *expected* nodes to be present when cluster is recovering from a full restart."
     name: RECOVER_AFTER_TIME
     value: ${ES_RECOVER_AFTER_TIME}
-
+  -
+    description: "The version tag of the image to use."
+    name: IMAGE_VERSION
+    value: ${IMAGE_VERSION_DEFAULT}
 parameters:
 - name: ES_INSTANCE_RAM
 - name: ES_NODE_QUORUM
 - name: ES_RECOVER_AFTER_NODES
 - name: ES_RECOVER_EXPECTED_NODES
 - name: ES_RECOVER_AFTER_TIME
+- name: IMAGE_VERSION_DEFAULT
