--- a/deployer/templates/curator.yaml
+++ b/deployer/templates/curator.yaml
@@ -115,15 +115,15 @@ parameters:
 -
   description: "Location of client certificate for authenticating to ElasticSearch"
   name: ES_CLIENT_CERT
-  value: "/etc/curator/keys/cert"
+  value: "/etc/curator/keys/client.crt"
 -
   description: "Location of client key for authenticating to ElasticSearch"
   name: ES_CLIENT_KEY
-  value: "/etc/curator/keys/key"
+  value: "/etc/curator/keys/client.key"
 -
   description: "Location of CA cert for validating connecting to ElasticSearch"
   name: ES_CA
-  value: "/etc/curator/keys/ca"
+  value: "/etc/curator/keys/ca.crt"
 -
   description: "The default number of days that logs will be retained for a project if an index management configuration for it is not provided"
   name: CURATOR_DEFAULT_DAYS
