--- a/deployer/templates/support.yaml
+++ b/deployer/templates/support.yaml
@@ -96,8 +96,7 @@ objects:
     component: support
   parameters:
   -
-    description: "The name for the PVC"
-    name: INSECURE_REPOS
+    name: INSECURE_REGISTRY
     value: "false"
   objects:
   -
@@ -105,7 +104,7 @@ objects:
     kind: ImageStream
     metadata:
       annotations:
-        openshift.io/image.insecureRepository: ${INSECURE_REPOS}
+        openshift.io/image.insecureRepository: ${INSECURE_REGISTRY}
       name: apiman-elasticsearch
     spec:
       dockerImageRepository: ${IMAGE_PREFIX}apiman-elasticsearch
@@ -114,7 +113,7 @@ objects:
     kind: ImageStream
     metadata:
       annotations:
-        openshift.io/image.insecureRepository: ${INSECURE_REPOS}
+        openshift.io/image.insecureRepository: ${INSECURE_REGISTRY}
       name: apiman-curator
     spec:
       dockerImageRepository: ${IMAGE_PREFIX}apiman-elasticsearch
@@ -123,7 +122,7 @@ objects:
     kind: ImageStream
     metadata:
       annotations:
-        openshift.io/image.insecureRepository: ${INSECURE_REPOS}
+        openshift.io/image.insecureRepository: ${INSECURE_REGISTRY}
       name: apiman-console
     spec:
       dockerImageRepository: ${IMAGE_PREFIX}apiman-console
@@ -132,7 +131,7 @@ objects:
     kind: ImageStream
     metadata:
       annotations:
-        openshift.io/image.insecureRepository: ${INSECURE_REPOS}
+        openshift.io/image.insecureRepository: ${INSECURE_REGISTRY}
       name: apiman-gateway
     spec:
       dockerImageRepository: ${IMAGE_PREFIX}apiman-gateway
