--- a/deployer/deployer.yaml
+++ b/deployer/deployer.yaml
@@ -78,8 +78,8 @@ items:
             value: ${IMAGE_PREFIX}
           - name: IMAGE_VERSION
             value: ${IMAGE_VERSION}
-          - name: INSECURE_REPOS
-            value: ${INSECURE_REPOS}
+          - name: INSECURE_REGISTRY
+            value: ${INSECURE_REGISTRY}
           - name: CONSOLE_HOSTNAME
             value: ${CONSOLE_HOSTNAME}
           - name: GATEWAY_HOSTNAME
@@ -131,8 +131,8 @@ items:
     name: IMAGE_VERSION
     value: "latest"
   -
-    description: 'Specify whether the repositories for apiman components are insecure'
-    name: INSECURE_REPOS
+    description: '"true" allows the registry for component images to be insecure'
+    name: INSECURE_REGISTRY
     value: "false"
   -
     description: "External hostname where users will reach the APIMan management UI"
