--- a/deployer/templates/support.yaml
+++ b/deployer/templates/support.yaml
@@ -12,7 +12,7 @@ parameters:
   required: true
 -
   description: 'Specify prefix for apiman component images; e.g. for "openshift/origin-apiman-deployer:v1.1", set prefix "openshift/origin-"'
-  name: IMAGE_PREFIX
+  name: IMAGE_PREFIX_DEFAULT
   value: "docker.io/openshift/origin-"
 objects:
 - apiVersion: "v1"
@@ -98,6 +98,10 @@ objects:
   -
     name: INSECURE_REGISTRY
     value: "false"
+  -
+    description: 'Specify prefix for apiman component images; e.g. for "openshift/origin-apiman-deployer:v1.1", set prefix "openshift/origin-"'
+    name: IMAGE_PREFIX
+    value: ${IMAGE_PREFIX_DEFAULT}
   objects:
   -
     apiVersion: v1
