provide right params to apiman-{console,gateway}
also fix gateway/console ACLs deployer configures for ES
also update deployer README

--- a/deployer/conf/elasticsearch.yml
+++ b/deployer/conf/elasticsearch.yml
@@ -60,8 +60,7 @@ searchguard:
       allowed_actions: ["indices:data/read/*", "*monitor*"]
       forbidden_actions: ["cluster:*", "indices:admin*", "indices:data/write*"]
     access:
-      allowed_actions: ["indices:data/*/*", "*monitor*"]
-      forbidden_actions: ["cluster:*", "indices:admin*", "indices:data/write*"]
+      allowed_actions: ["indices:data/*/*", "indices:admin/create", "indices:admin/read", "*monitor*"]
     curator:
       allowed_actions: ["indices:admin/get", "indices:admin/delete"]
 
