deployer: supply curator config file in configmap

--- a/deployer/templates/curator.yaml
+++ b/deployer/templates/curator.yaml
@@ -77,6 +77,9 @@ objects:
             - name: certs
               mountPath: /etc/curator/keys
               readOnly: true
+            - name: config
+              mountPath: /etc/curator/settings
+              readOnly: true
             env:
             - name: "K8S_HOST_URL"
               value: ${MASTER_URL}
@@ -92,8 +95,6 @@ objects:
               value: ${ES_CA}
             - name: "CURATOR_DEFAULT_DAYS"
               value: ${CURATOR_DEFAULT_DAYS}
-            - name: "CURATOR_CONF_LOCATION"
-              value: ${CURATOR_CONF_LOCATION}
             - name: "CURATOR_RUN_HOUR"
               value: ${CURATOR_RUN_HOUR}
             - name: "CURATOR_RUN_MINUTE"
@@ -102,6 +103,9 @@ objects:
           - name: certs
             secret:
               secretName: apiman-curator
+          - name: config
+            configMap:
+              name: apiman-curator
 parameters:
 -
   description: "Internal url for reaching the master API to query pod labels"
@@ -131,10 +135,6 @@ parameters:
   description: "The default number of days that logs will be retained for a project if an index management configuration for it is not provided"
   name: CURATOR_DEFAULT_DAYS
   value: "30"
--
-  description: "Location of the directory containing the yaml settings file"
-  name: CURATOR_CONF_LOCATION
-  value: "/etc/curator"
 -
   description: "The hour of the day (24 hour format) at which to run the curator jobs."
   name: CURATOR_RUN_HOUR
