introduce apiman-builder and related dev builds
apiman upstream uses maven for building docker images.
apiman-builder is a custom builder that basically just invokes that
build and pushes the result. it's not very efficient to run repeatedly
but it works and saves having to install maven yourself.

created dev BCs for this and dependent apiman builds.

--- a/deployer/conf/curator.yml
+++ b/deployer/conf/curator.yml
@@ -7,7 +7,7 @@
 #  runhour: 0
 #  runminute: 0
 
-# to keep ops logs for a shorter duration:
+# to keep ops logs for a different duration:
 #.operations:
 #  delete:
 #    weeks: 8
