--- a/deployer/conf/elasticsearch.yml
+++ b/deployer/conf/elasticsearch.yml
@@ -55,12 +55,7 @@ searchguard:
         truststore_filepath: /etc/elasticsearch/secret/truststore
         truststore_password: ${TRUSTSTORE_PASSWORD}
   actionrequestfilter:
-    names: ["readonly", "access", "curator"]
-    readonly:
-      allowed_actions: ["indices:data/read/*", "*monitor*"]
-      forbidden_actions: ["cluster:*", "indices:admin*", "indices:data/write*"]
-    access:
-      allowed_actions: ["indices:data/*/*", "indices:admin/create", "indices:admin/read", "*monitor*"]
+    names: ["curator"]
     curator:
       allowed_actions: ["indices:admin/get", "indices:admin/delete"]
 
@@ -71,11 +66,13 @@ openshift:
     users:
       names: ["system.apiman.console", "system.apiman.gateway", "system.apiman.curator", "system.apiman.elasticsearch"]
       system.apiman.console:
-        execute: ["actionrequestfilter.access"]
-        actionrequestfilter.access.comment: "Console can see/edit data"
+        bypass: ["*"]
+        "*.indices": [".apiman_*"]
+        "*.comment": "Console can see/edit APIMan data"
       system.apiman.gateway:
-        execute: ["actionrequestfilter.access"]
-        actionrequestfilter.access.comment: "Gateway can see/edit data"
+        bypass: ["*"]
+        "*.indices": [".apiman_*"]
+        "*.comment": "Gateway can see/edit APIMan data"
       system.apiman.curator:
         execute: ["actionrequestfilter.curator"]
         actionrequestfilter.curator.comment: "Curator can list all indices and delete them"
