--- a/deployer/templates/es.yaml
+++ b/deployer/templates/es.yaml
@@ -42,18 +42,16 @@ objects:
             deployment: ${ES_DEPLOYMENT_NAME}
         spec:
           serviceAccountName: apiman-elasticsearch
-          limits:
-          -
-            type: Pod
-            max:
-              memory: "${INSTANCE_RAM}i"
-            min:
-              memory: "512Mi"
           containers:
             -
               name: "elasticsearch"
               image: ${IMAGE_PREFIX}apiman-elasticsearch:${IMAGE_VERSION}
               imagePullPolicy: IfNotPresent
+              resources:
+                limits:
+                  memory: "${INSTANCE_RAM}i"
+                requests:
+                  memory: "256Mi"
               ports:
               -
                 containerPort: 9200
