deployer: switch components pull policy to Always

--- a/deployer/templates/console.yaml
+++ b/deployer/templates/console.yaml
@@ -53,7 +53,7 @@ objects:
             -
               name: "console"
               image: ${IMAGE_PREFIX}apiman-console:${IMAGE_VERSION}
-              imagePullPolicy: IfNotPresent
+              imagePullPolicy: Always
               ports:
               -
                 containerPort: 7070
